tests/rosetta/out/Smalltalk/cullen-and-woodall-numbers.out
/tmp/cullen-and-woodall-numbers.st:7: parse error, expected ']'
